Updating to Angular 4
Also adding loading dots

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
 <body>
     <sc-app>
+        <div class="fxs-progress">
+            <div class="fxs-progress-dots">
+                <div></div><div></div><div></div>
+            </div>
+        </div>
     </sc-app>
 </body>
 
