Adding LiveAgentChat Component

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
             window.appInsights=appInsights;
             appInsights.trackPageView();
     </script>
+    <script src="https://wchat.freshchat.com/js/widget.js"></script>
 
     <link rel="stylesheet" type="text/css" href="assets/iframe-loading.css" />
 
