Fix landing page height

--- a/AngularApp/projects/applens/src/index.html
+++ b/AngularApp/projects/applens/src/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="sidebar-mini skin-blue" id="page-top" style="height:auto;min-height:100%">
-  <div class="wrapper" style="height: auto; min-height: 100%;">
+<body class="sidebar-mini skin-blue" id="page-top">
+  <div class="wrapper">
     <app-root></app-root>
   </div>
 </body>
