--- a/AngularApp/projects/applens/src/index.html
+++ b/AngularApp/projects/applens/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="assets/custom-timeline.css">
 </head>
 <body class="sidebar-mini skin-blue" id="page-top">
+  <span>hahahah</span>
   <div class="wrapper">
     <app-root></app-root>
   </div>
