--- a/AngularApp/projects/app-service-diagnostics/src/index.html
+++ b/AngularApp/projects/app-service-diagnostics/src/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/iframe-loading.css" />
     <link rel="stylesheet" type="text/css" href="assets/custom-timeline.css">
-
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.4/nv.d3.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
 
@@ -17,6 +17,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.4/nv.d3.min.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </head>
 
 <body>
