--- a/AngularApp/projects/applens/src/index.html
+++ b/AngularApp/projects/applens/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="assets/custom-timeline.css">
   <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css" />
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </head>
 
 <body class="sidebar-mini skin-blue" id="page-top">
